# rflang_2025

./: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  gengen.c  gengen2.h  main.g
.github/workflows/: linux-x64.yml  macos-arm.yml  windows-cmake.yml  windows.yml
cmake/: Prebuild.cmake  PreprocessBuild.cmake
samples/: expr.rf  main.g  main.rf  main.rf.analyze
src/: main.c  parser.h  result.h  tokenizer.c  tokenizer.h
src/librfc/: ast.c  ast.h  ast_reconstruct.c  ast_reconstruct.h  dynarray_token.c  dynarray_token.h  parser.c  parser.h  result.h  token.c  token.h  tokenizer.c  tokenizer.h  variant.h
src/rfc/: main.c
src/tpl_support/: stack_ast_node_spec.c
tests/: CMakeLists.txt  Makefile  gengen.c  other.tmp  test_type.h  type.tmp
tests/lib/: munit_ext.h  test_util.h
tests/samples/: tokenizer_test.rf
tests/src/: ast_reconstruct.c  dynarray_token.c  main.c  parser.c  parser_run.c  parser_stack.c  redirect.c  result.c  stack_ast_node.c  stack_test_type.c  stack_test_type.h  tests.h  token.c  tokenizer.c  variant.c
tests/support/tpl/: stack_test_type_spec.c
tpl/: dynarray.ctpl  dynarray.htpl  stack.ctpl  stack.htpl
